<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="widget1">Some Text</string>
    <string name="widget2">Press this Button</string>
    <string name="widget3">Do you see me?</string>
    <string name="widget4">image</string>
    <string name="widget5">Enter the number</string>
    <string name="choice1">choose this</string>
    <string name="choice2">oh, no, choose this</string>
    <string name="choice3">this is the best choice</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="trash_bin">trash bin</string>
</resources>