<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- task 1, image 10 -->

    <CheckBox
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:layout_weight="1"

        android:text="@string/widget3"
        android:background="@color/green"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <RadioGroup
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"

        android:gravity="center"
        android:text="@string/widget2">

       <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice1"
            android:textSize="24sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice2"
            android:textSize="24sp" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choice3"
            android:textSize="24sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1"

        android:text="@string/widget5"
        android:background="@color/yellow"
        android:gravity="center"
        android:textSize="24sp" />

</LinearLayout>