<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- task 1, image 1 -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:text="@string/widget1"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:text="@string/widget2"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:background="@color/green"
        android:contentDescription="@string/widget4"
        android:src="@android:drawable/ic_menu_delete" />

</LinearLayout>