<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!-- task 3, image 23 -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintBottom_toTopOf="@id/view6"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"

            android:text="@string/str_1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="@color/yellow"/>

        <Button
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/str_2"
            android:gravity="center"
            android:textSize="24sp"/>

        <CheckBox
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2"
            app:layout_constraintTop_toBottomOf="@id/view5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/view4"

            android:text="@string/str_3"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="@color/orange"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view3"

            android:text="@string/str_4"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:background="@color/light_blue"/>

        <ImageView
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="0.5"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintStart_toEndOf="@id/view3"
            app:layout_constraintEnd_toEndOf="parent"

            android:contentDescription="@string/widget4"
            android:src="@android:drawable/ic_menu_delete"
            android:background="@color/light_pink"/>

        <RadioGroup
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="0.5"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintStart_toEndOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"

            android:gravity="center"
            android:background="@color/light_purple">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_6"
                android:textSize="24sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_6"
                android:textSize="24sp"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>